[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/Assignment/PostAssignment.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/button_post.png" type="Texture" id=5]
[ext_resource path="res://images/modal_box.png" type="Texture" id=6]
[ext_resource path="res://images/frames/loading/Loading.tres" type="SpriteFrames" id=7]
[ext_resource path="res://entities/Assignment/Post_Assignment_Sucess_Popup.gd" type="Script" id=8]
[ext_resource path="res://images/button_done.png" type="Texture" id=9]
[ext_resource path="res://images/button_facebook_share.png" type="Texture" id=10]
[ext_resource path="res://images/button_twitter_share.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.847059, 0.8, 0.8, 1 )

[node name="PostAssignment" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.394, 298.801 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 179.55, 78.85 )
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 376.0
margin_top = 59.0
margin_right = 896.0
margin_bottom = 127.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
text = "POST ASSIGNMENT"
scroll_active = false

[node name="class_placeholder" type="RichTextLabel" parent="."]
margin_left = 740.0
margin_top = 150.0
margin_right = 1240.0
margin_bottom = 215.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SELECT GROUP:"
scroll_active = false

[node name="ClassOption" type="OptionButton" parent="."]
margin_left = 740.0
margin_top = 185.0
margin_right = 905.0
margin_bottom = 217.0

[node name="file_placeholder" type="RichTextLabel" parent="."]
margin_left = 740.0
margin_top = 230.0
margin_right = 1240.0
margin_bottom = 295.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SELECT FILE:"
scroll_active = false

[node name="FileOption" type="OptionButton" parent="."]
margin_left = 740.0
margin_top = 270.0
margin_right = 905.0
margin_bottom = 302.0

[node name="title_placeholder" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 150.0
margin_right = 1125.0
margin_bottom = 215.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ENTER ASSIGNMENT TITLE:"
scroll_active = false

[node name="title_field" type="TextEdit" parent="."]
margin_left = 125.0
margin_top = 185.0
margin_right = 685.0
margin_bottom = 217.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="details_placeholder" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 230.0
margin_right = 1125.0
margin_bottom = 295.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ENTER ASSIGNMENT DETAILS:"
scroll_active = false

[node name="details_field" type="TextEdit" parent="."]
margin_left = 125.0
margin_top = 270.0
margin_right = 685.0
margin_bottom = 366.0
custom_styles/normal = SubResource( 2 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="duedate_placeholder" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 380.0
margin_right = 1125.0
margin_bottom = 445.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ENTER ASSIGNMENT DUE DATE:"
scroll_active = false

[node name="day_placeholder" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 467.0
margin_right = 325.0
margin_bottom = 617.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]DAY
(DD)[/center]"
text = "DAY
(DD)"
scroll_active = false

[node name="day_field" type="TextEdit" parent="."]
margin_left = 125.0
margin_top = 420.0
margin_right = 205.0
margin_bottom = 468.0
custom_styles/normal = SubResource( 3 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="month_placeholder" type="RichTextLabel" parent="."]
margin_left = 720.0
margin_top = 467.0
margin_right = 920.0
margin_bottom = 617.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]MINUTE
(MM)[/center]"
text = "MINUTE
(MM)"
scroll_active = false

[node name="month_field" type="TextEdit" parent="."]
margin_left = 250.0
margin_top = 420.0
margin_right = 330.0
margin_bottom = 468.0
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="year_placeholder" type="RichTextLabel" parent="."]
margin_left = 375.0
margin_top = 467.0
margin_right = 775.0
margin_bottom = 617.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]YEAR
(YYYY)[/center]"
text = "YEAR
(YYYY)"
scroll_active = false

[node name="year_field" type="TextEdit" parent="."]
margin_left = 375.0
margin_top = 420.0
margin_right = 535.0
margin_bottom = 468.0
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="hour_placeholder" type="RichTextLabel" parent="."]
margin_left = 580.0
margin_top = 467.0
margin_right = 780.0
margin_bottom = 617.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]HOUR
(HH)[/center]"
text = "HOUR
(HH)"
scroll_active = false

[node name="hour_field" type="TextEdit" parent="."]
margin_left = 580.0
margin_top = 420.0
margin_right = 660.0
margin_bottom = 468.0
custom_styles/normal = SubResource( 6 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="minute_placeholder" type="RichTextLabel" parent="."]
margin_left = 250.0
margin_top = 467.0
margin_right = 450.0
margin_bottom = 617.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]MONTH
(MM)[/center]"
text = "MONTH
(MM)"
scroll_active = false

[node name="minute_field" type="TextEdit" parent="."]
margin_left = 720.0
margin_top = 420.0
margin_right = 800.0
margin_bottom = 468.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="PostAssignment_Btn" type="TouchScreenButton" parent="."]
position = Vector2( 850, 530 )
scale = Vector2( 1.052, 1.324 )
normal = ExtResource( 5 )

[node name="error_field" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 540.0
margin_right = 1267.0
margin_bottom = 605.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
scroll_active = false

[node name="loading" type="Popup" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="loadingbg" type="Sprite" parent="loading"]
position = Vector2( 510.619, 330.049 )
scale = Vector2( 2.191, 1 )
texture = ExtResource( 6 )

[node name="loadingani" type="AnimatedSprite" parent="loading"]
position = Vector2( 511.949, 326.483 )
frames = ExtResource( 7 )
animation = "loading"
frame = 26
playing = true

[node name="Post_Assignment_Success_Popup" type="Sprite" parent="."]
position = Vector2( 510, 330 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 6 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Post_Assignment_Success_Popup"]
margin_left = -218.656
margin_top = -80.0
margin_right = 885.344
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Your assignment has been posted successfully!"

[node name="done_btn" type="TouchScreenButton" parent="Post_Assignment_Success_Popup"]
position = Vector2( -70, 33.3333 )
scale = Vector2( 1.412, 1.2 )
normal = ExtResource( 9 )

[node name="share_to_facebook_btn" type="TouchScreenButton" parent="Post_Assignment_Success_Popup"]
position = Vector2( -210, -33.3333 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 10 )

[node name="share_to_twitter_btn" type="TouchScreenButton" parent="Post_Assignment_Success_Popup"]
position = Vector2( 13, -33.3333 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 11 )
